deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homecentre
  labels:
    name: homecentre
    project: recommendation-system
